# file_upload

./: .gitignore  README.md  requirements.txt
.github/actions/package-lambda/: README.md  action.yml
.github/actions/run-tests/: README.md  action.yml
.github/actions/terraform-deploy/: README.md  action.yml
.github/workflows/: deploy.yml  test.yml
bootstrap/: bootstrap.sh
design/: future-enhancements.md
design/architecture/: architecture.md  network-architecture.md  repo-structure.md  terraform-modules.md
design/auth/: github-gmail-config.md  github-oidc-role.md
design/bootstrap/: bootstrap-process.md  s3-backend-setup.md
design/cicd/: cicd-pipeline.md  deploy-workflow.md
design/logging/: logging-design.md
design/testing/: testing-strategy.md
lambda/: lambda_function.py  pyproject.toml  requirements.txt
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  schema.sql  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/policies/: lambda-execution-policy.json
tests/: run-tests.sh  run_complete_test.sh  test_data.csv
tests/functional/: test-csv-processing.sh  test-data-validation.sh
tests/infrastructure/: test-network-connectivity.sh  test-permissions.sh  test-resource-deployment.sh
tests/integration/: test-end-to-end-workflow.sh  test-error-handling.sh  test-lambda-rds-connection.sh  test-s3-lambda-trigger.sh
(+9 files in other folders)
