[project]
name = "file-upload-lambda"
version = "0.1.0"
description = "Lambda function for processing CSV file uploads"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
